--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,40 @@
 version: "3.9"
 
 services:
+  grafana-db:
+    image: postgres:16
+    environment:
+      - POSTGRES_DB=grafana
+      - POSTGRES_USER=grafana
+      - POSTGRES_PASSWORD=SvaneveienNR1
+    volumes:
+      - grafana-db-data:/var/lib/postgresql/data
+    networks:
+      - overlay-observability
+    deploy:
+      replicas: 1
+
+  grafana:
+    image: grafana/grafana:latest
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=SvaneveienNR1
+      - GF_SERVER_ROOT_URL=http://grafana.local/
+      - GF_DATABASE_TYPE=postgres
+      - GF_DATABASE_HOST=grafana-db:5432
+      - GF_DATABASE_NAME=grafana
+      - GF_DATABASE_USER=grafana
+      - GF_DATABASE_PASSWORD=SvaneveienNR1
+      - GF_DATABASE_SSL_MODE=disable
+    volumes:
+      - grafana-data:/var/lib/grafana
+    networks:
+      - overlay-observability
+    deploy:
+      replicas: 1
+
   prometheus:
     image: prom/prometheus:latest
     command:
@@ -16,9 +50,6 @@ services:
       - overlay-observability
     deploy:
       replicas: 1
-      placement:
-        constraints:
-          - node.role == manager
 
   loki:
     image: grafana/loki:latest
@@ -35,43 +66,4 @@ services:
 
   promtail:
     image: grafana/promtail:latest
-    command: -config.file=/etc/promtail/config.yml
-    volumes:
-      - ./promtail/config.yml:/etc/promtail/config.yml:ro
-      - /var/log:/var/log
-      - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - /var/run/docker.sock:/var/run/docker.sock
-    networks:
-      - overlay-observability
-    deploy:
-      mode: global
-
-grafana:
-  image: grafana/grafana:latest
-  ports:
-    - "3000:3000"
-  environment:
-    - GF_SECURITY_ADMIN_USER=admin
-    - GF_SECURITY_ADMIN_PASSWORD=SvaneveienNR1
-    - GF_SERVER_ROOT_URL=http://grafana.local/
-    - GF_DATABASE_TYPE=postgres
-    - GF_DATABASE_HOST=grafana-db_grafana-db:5432
-    - GF_DATABASE_NAME=grafana
-    - GF_DATABASE_USER=grafana
-    - GF_DATABASE_PASSWORD=SvaneveienNR1
-    - GF_DATABASE_SSL_MODE=disable
-    volumes:
-      - grafana-data:/var/lib/grafana
-    networks:
-      - overlay-observability
-    deploy:
-      replicas: 1
-
-networks:
-  overlay-observability:
-    external: true
-
-volumes:
-  prometheus-data:
-  loki-data:
-  grafana-data:
+    command: -config.file=/etc/promtail/config
