--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,25 @@ services:
     deploy:
       replicas: 1
 
-  promtail:
+   promtail:
     image: grafana/promtail:latest
-    command: -config.file=/etc/promtail/config
+    command: -config.file=/etc/promtail/config.yml
+    volumes:
+      - ./promtail/config.yml:/etc/promtail/config.yml:ro
+      - /var/log:/var/log
+      - /var/lib/docker/containers:/var/lib/docker/containers:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - overlay-observability
+    deploy:
+      mode: global
+
+networks:
+  overlay-observability:
+    external: true
+
+volumes:
+  grafana-db-data:
+  grafana-data:
+  prometheus-data:
+  loki-data:
