--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,9 +25,21 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      # enkel config-fil, se neste punkt
       - /opt/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - prometheus-data:/prometheus
+    networks:
+      - overlay-observability
+    deploy:
+      replicas: 1
+
+  loki:
+    image: grafana/loki:latest
+    command: -config.file=/etc/loki/local-config.yaml
+    ports:
+      - "3100:3100"
+    volumes:
+      - loki-data:/loki
+      - /opt/loki/local-config.yaml:/etc/loki/local-config.yaml:ro
     networks:
       - overlay-observability
     deploy:
@@ -40,3 +52,4 @@ networks:
 volumes:
   grafana-data:
   prometheus-data:
+  loki-data:
