--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       replicas: 1
 
   loki:
-    image: grafana/loki:latest
+    image: grafana/loki:2.9.8
     command: -config.file=/etc/loki/local-config.yaml
     ports:
       - "3100:3100"
