--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
     volumes:
       - /var/log:/var/log:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
-      - /etc/promtail/config.yml:/etc/promtail/config.yml:ro
+#      - /etc/promtail/config.yml:/etc/promtail/config.yml:ro
     depends_on:
       - loki
 
